--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "assert": "^2.0.0",
     "canvas": "^2.8.0",
     "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "face-api.js": "^0.22.2",
     "mongodb": "^4.1.0",
