--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@tensorflow/tfjs-node": "^3.8.0",
     "assert": "^2.0.0",
     "canvas": "^2.8.0",
+    "canvas-confetti": "^1.4.0",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
